# sgd-mds

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_config.yaml  benchmark_utils.py  convergence_benchmark.py  run_benchmark.py  seismic_benchmark.py
datasets/cnae9/: y.csv
datasets/fashion_mnist/: y.csv
datasets/har/: y.csv
datasets/seismic/: X.csv  y.csv
sgd_mds/: __init__.py  core.py  distances.py  estimator.py  samplers.py  schedules.py  stopping.py  stress.py  utils.py
tests/: test_distances.py  test_import.py  test_schedules.py  test_stopping.py  test_stress.py
